# sign-here

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  coverage.json  extensions.bzl  repositories.bzl
.bcr/: metadata.template.json
.github/workflows/: ci.yaml  release.yml  release_prep.sh
Sources/CoreLibrary/: BUILD  Clock.swift  Files.swift  Keychain.swift  Log.swift  Network.swift  ProcessInfo.swift  Shell.swift  UUID.swift
Sources/CoreLibrary/Extensions/: URLSession.swift
Sources/CoreLibraryTestKit/: AssertSnapshot.swift  BUILD  RunfilesPathHelper.swift
Sources/SignHereLibrary/: BUILD  SignHereCommand.swift
Sources/SignHereLibrary/Commands/: CertificateOutput.swift  CertificateSource.swift  CreateKeychainCommand.swift  CreateProvisioningProfileCommand.swift  DeleteKeychainCommand.swift  (+3 more)
Sources/SignHereTool/: BUILD  SignHereToolMain.swift  main.swift
Tests/SignHereLibraryTests/: BUILD  CertificatesModelTests.swift  CoreLibraryImpTests.swift  CreateKeychainCommandTests.swift  CreateProvisioningProfileCommandTests.swift  DeleteKeychainCommandTests.swift  DeleteProvisioningProfileCommandTests.swift  DevicesModelTests.swift  JSONWebTokenServiceTests.swift  PlatformTests.swift  ProfileTypeModelTests.swift  ProfilesModelTests.swift  SignHereCommandTests.swift  StoreTests.swift  iTunesConnectServiceTests.swift
e2e/bzlmod/: BUILD.bazel  MODULE.bazel
tools/coverage/: BUILD  check_coverage.py  check_coverage.sh  check_coverage_test.py
tools/readme/: BUILD  README.template.md  generate_readme.py  generate_readme.sh
(+102 files in other folders)
