module(name = "sign-here")

bazel_dep(name = "rules_apple", version = "3.5.0", repo_name = "build_bazel_rules_apple")
bazel_dep(name = "rules_swift", version = "1.18.0", repo_name = "build_bazel_rules_swift", max_compatibility_level = 2)
bazel_dep(name = "swift-syntax", version = "509.0.2", repo_name = "SwiftSyntax")
bazel_dep(name = "swift_argument_parser", version = "1.3.0", repo_name = "com_github_apple_swift_argument_parser")

non_module_dependencies = use_extension("//:extensions.bzl", "non_module_dependencies")
use_repo(
    non_module_dependencies,
    "com_github_kitura_blueecc",
    "com_github_kylef_pathkit",
)
